# fast-api-postgres

./: .gitignore  main.py  pyproject.toml
